--- a/Weather-App/Makefile
+++ b/Weather-App/Makefile
@@ -1,16 +1,12 @@
-PYTHON = python
+PYTHON = python3
 FLASK_APP = main.py
 REQUIREMENTS_FILE = requirements.txt
 
-# Targets
-.PHONY: run install clean
+.PHONY: run install
 
 run:
 	$(PYTHON) $(FLASK_APP)
 
 install:
 	$(PYTHON) -m pip install -r $(REQUIREMENTS_FILE)
-
-clean:
-	# Add any cleanup tasks here
 
